# cs2h

./: CMakeLists.txt  readme.md
cs2h/: CMakeLists.txt  main.cpp  utility.cpp  utility.hpp
cs2h/compiler/: compiler.cpp  compiler.hpp  compiler_dxc.cpp  compiler_dxc.hpp  compiler_fxc.cpp  compiler_fxc.hpp
cs2h/tests/cs2h_basic_test/: cs2h_basic_test.hpp  cs2h_basic_test.json  cs2h_basic_test_shader.hlsl
